@@ -9,4 +9,6 @@ Bug fixes:
 -
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- moved CPSPortlets to an extension profile and make it mandatory at install 
+  time
+- moved CPSSkins to an extension profile and make it mandatory at install time
